--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,42 +1,75 @@
 <section class="p-1 min-w">
-  <h2 class="text-blue-200 text-center text-4xl lg:text-6xl font-semibold">TradeByte</h2>
+  <h2 class="text-blue-200 text-center text-4xl lg:text-6xl font-semibold">
+    TradeByte
+  </h2>
   <div class="flex flex-col mb-6 shadow-lg rounded-lg bg-gray-300">
     <div class="rounded-t mb-0 px-6 pt-6 pb-2">
       <div class="btn-wrapper text-center">
         <a href="/auth/google" class="w-full">
           <button
             class="bg-white active:bg-gray-100 text-gray-800 font-normal px-4 py-2 rounded outline-none focus:outline-none mr-1 mb-1 uppercase shadow hover:shadow-md inline-flex items-center font-bold text-xs justify-center w-full"
-            type="button" style="transition: all 0.15s ease 0s;"><img alt="..." class="w-5 mr-1"
-              src="/images/google.png">Sign in with Google</button>
+            type="button"
+            style="transition: all 0.15s ease 0s;"
+          >
+            <img alt="..." class="w-5 mr-1" src="/images/google.png" />Sign in
+            with Google
+          </button>
         </a>
       </div>
-      <%- include('./partials/_messages') %> 
-      <hr class="mt-6 border-b-1 border-gray-400">
+      <%- include('./partials/_messages') %>
+      <hr class="mt-6 border-b-1 border-gray-400" />
     </div>
     <div class="flex-auto px-4 lg:px-10 pb-10 pt-0">
-      <div class="text-gray-500 text-center mb-3 font-bold"><small>Or sign in with credentials</small></div>
+      <div class="text-gray-500 text-center mb-3 font-bold">
+        <small>Or sign in with credentials</small>
+      </div>
       <form action="/user/signin" method="POST">
         <div class="relative w-full mb-3">
-          <label class="block uppercase text-gray-700 text-xs font-bold mb-2" for="grid-password">Email</label>
-          <input type="email" name="email"
+          <label
+            class="block uppercase text-gray-700 text-xs font-bold mb-2"
+            for="grid-password"
+            >Email</label
+          >
+          <input
+            type="email"
+            name="email"
             class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
-            placeholder="Email" style="transition: all 0.15s ease 0s;">
+            placeholder="Email"
+            style="transition: all 0.15s ease 0s;"
+          />
         </div>
         <div class="relative w-full mb-3">
-          <label class="block uppercase text-gray-700 text-xs font-bold mb-2" for="grid-password">Password</label>
-          <input type="password" name="password"
+          <label
+            class="block uppercase text-gray-700 text-xs font-bold mb-2"
+            for="grid-password"
+            >Password</label
+          >
+          <input
+            type="password"
+            name="password"
             class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
-            placeholder="Password" style="transition: all 0.15s ease 0s;">
+            placeholder="Password"
+            style="transition: all 0.15s ease 0s;"
+          />
         </div>
         <div class="text-center mt-6">
           <button
             class="bg-gray-900 text-white active:bg-gray-700 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full"
-            type="submit" style="transition: all 0.15s ease 0s;">Sign In</button>
+            type="submit"
+            style="transition: all 0.15s ease 0s;"
+          >
+            Sign In
+          </button>
         </div>
       </form>
-      <a href="/user/signup"><button
+      <a href="/user/signup"
+        ><button
           class="bg-red-900 text-white active:bg-red-700 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full"
-          type="button" style="transition: all 0.15s ease 0s;">Sign Up</button>
+          type="button"
+          style="transition: all 0.15s ease 0s;"
+        >
+          Sign Up
+        </button>
       </a>
     </div>
   </div>
