--- a/views/view.ejs
+++ b/views/view.ejs
@@ -1,39 +1,20 @@
 <div class="relative md:ml-64 py-6 px-3 w-full">
   <div class="mx-auto max-w-4xl">
-    <h2
-      class="text-gray-700 text-4xl lg:text-6xl font-semibold leading-none tracking-wider"
-    >
-      TradeByte
-    </h2>
-    <div class="relative text-gray-600 my-8 shadow-md rounded-b-lg">
+    <div class="relative bg-white text-gray-600 mt-10 mb-24 shadow-xl rounded-lg">
+      <lable type="submit" class="absolute left-0 top-0 mt-3 ml-4">
+          <svg class="h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
+              viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;"
+              xml:space="preserve" width="512px" height="512px">
+              <path
+                  d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
+          </svg>
+      </lable>
       <input
-        type="search"
-        name="serch"
-        placeholder="Search Stocks"
-        class="bg-transparent h-10 w-full px-5 pl-10 pr-10 rounded-full text-sm focus:outline-none"
-      />
-      <button type="submit" class="absolute left-0 top-0 mt-3 ml-4">
-        <svg
-          class="h-4 w-4 fill-current"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          version="1.1"
-          id="Capa_1"
-          x="0px"
-          y="0px"
-          viewBox="0 0 56.966 56.966"
-          style="enable-background: new 0 0 56.966 56.966;"
-          xml:space="preserve"
-          width="512px"
-          height="512px"
-        >
-          <path
-            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"
-          />
-        </svg>
-      </button>
-    </div>
-    <div class="head flex justify-between items-center mx-auto mb-4">
+          class="bg-white focus:outline-none focus:outline-none border border-gray-300 rounded-lg mr-6 pl-10 pr-4 py-2 px-4 block w-full appearance-none leading-normal"
+          type="search" placeholder="Search">
+  </div>
+    <div class="head flex justify-between items-center mx-auto my-4">
       <div class="company flex flex-col justify-start">
         <h1 class="text-2xl md:text-3xl font-bold"><%= assetName %></h1>
         <h3>
@@ -48,9 +29,7 @@
     <h2 class="text-xl font-bold mb-1">Price Summary</h2>
     <section class="price-summary mb-8 bg-white shadow-md p-4 rounded">
       <div class="table w-full">
-        <div
-          class="w-full grid grid-flow-col grid-cols-2 grid-rows-2 gap-8 md:grid-cols-4 md:grid-rows-1"
-        >
+        <div class="w-full grid grid-flow-col grid-cols-2 grid-rows-2 gap-8 md:grid-cols-4 md:grid-rows-1">
           <div class="flex flex-col justify-start">
             <p class="text-md uppercase font-semibold text-gray-600">
               Today's High
@@ -80,10 +59,8 @@
     </section>
 
     <h2 class="text-xl font-bold mb-1">Overview</h2>
-    <section
-      class="chart-container relative w-full bg-white shadow-md rounded px-4 pt-2 pb-4 mb-8"
-      style="height: 50vh;"
-    >
+    <section class="chart-container relative w-full bg-white shadow-md rounded px-4 pt-2 pb-4 mb-8"
+      style="height: 50vh;">
       <canvas id="chart"></canvas>
     </section>
 
@@ -91,8 +68,7 @@
     <section class="Comapany-summary mb-4 bg-white shadow-md p-4 rounded">
       <div class="table w-full">
         <div
-          class="w-full grid grid-flow-col grid-cols-2 grid-rows-4 md:grid-cols-3 md:grid-rows-3 gap-4 lg:grid-cols-4 lg:grid-rows-2"
-        >
+          class="w-full grid grid-flow-col grid-cols-2 grid-rows-4 md:grid-cols-3 md:grid-rows-3 gap-4 lg:grid-cols-4 lg:grid-rows-2">
           <div class="flex flex-col justify-start break-words">
             <p class="text-md uppercase font-semibold text-gray-600">
               Market Cap
@@ -143,23 +119,23 @@
   </div>
   <a href="/cart/<%- symbol %>">
     <button
-      class="m-8 p-0 w-16 h-16 bg-blue-600 text-white font-bold rounded-full hover:bg-blue-700 active:shadow-lg mouse shadow transition ease-in duration-200 focus:outline-none fixed right-0 bottom-0"
-    >
+      class="m-8 p-0 w-16 h-16 bg-blue-600 text-white font-bold rounded-full hover:bg-blue-700 active:shadow-lg mouse shadow transition ease-in duration-200 focus:outline-none fixed right-0 bottom-0">
       Buy
     </button>
   </a>
 </div>
 
 <script>
-  let datesList = <%- JSON.stringify(dates) %>;
-  let closingList = <%- JSON.stringify(closing) %> ;
+  let datesList = < % -JSON.stringify(dates) % > ;
+  let closingList = < % -JSON.stringify(closing) % > ;
   var ctx = document.getElementById('chart').getContext('2d');
   var myChart = new Chart(ctx, {
     type: 'line',
     data: {
-      labels: datesList, closingList,
+      labels: datesList,
+      closingList,
       datasets: [{
-        label: <%- JSON.stringify(symbol) %>,
+        label: < % -JSON.stringify(symbol) % > ,
         data: closingList,
         borderColor: "#3e95cd",
         backgroundColor: "rgba(118,152,255,0.4)"
