--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,5 +1,7 @@
 <div class="relative md:ml-56 lg:ml-64 py-6 px-3 w-full">
-  <div class="relative bg-white mx-auto max-w-6xl text-gray-600 mt-6 shadow-xl rounded-lg">
+
+  <!-- search Box if Required -->
+  <!-- <div class="relative bg-white mx-auto max-w-6xl text-gray-600 mt-6 shadow-xl rounded-lg">
     <lable type="submit" class="absolute left-0 top-0 mt-3 ml-4">
       <svg class="h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
         version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 56.966 56.966"
@@ -11,7 +13,7 @@
     <input
       class="bg-white focus:outline-none focus:outline-none border border-gray-300 rounded-lg mr-6 pl-10 pr-4 py-2 px-4 block w-full appearance-none leading-normal"
       type="search" placeholder="Search">
-  </div>
+  </div> -->
   <div class="mx-auto max-w-6xl flex flex-col w-full px-4 md:py-12 md:px-8 text-gray-800">
     <form action="/cart/buy" method="POST">
       <h1 class="text-2xl lg:text-4xl font-bold mt-8 mb-4 flex">
