--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -66,6 +66,10 @@
         href="/addBalance">+ Add Balance</a>
       <!-- only for development purpose i added ADD BALANCE button here on navbar. -->
 
+      <a class="block px-4 py-2 mt-2 text-sm font-semibold text-gray-900 hover:text-blue-800 focus:text-blue-900 hover:bg-blue-100 focus:bg-blue-200 focus:outline-none focus:shadow-outline flex <%= href === '/trasaction' ? 'border tab-color border-l-8': '' %>"
+        href="/transaction">$ Transactions History</a>
+      <!-- only for development purpose i added TRANSACTION HISTORY button here on navbar. -->
+
       <a class="block px-4 py-2 mt-2 text-sm font-semibold text-gray-900 hover:text-blue-800 focus:text-blue-900 hover:bg-blue-100 focus:bg-blue-200 focus:outline-none focus:shadow-outline flex <%= href === '/auth/logout' ? 'border tab-color border-l-8': '' %>"
         href="/auth/logout"><svg class="w-6 ml-2 mr-1" fill="currentColor" viewBox="0 0 20 20">
           <path fill-rule="evenodd"
