--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -318,7 +318,7 @@
 
             <!-- table component 2 -->
 
-            <div class="px-3 sm:px-8 py-4 overflow-hidden h-auto w-full">
+            <div class="px-3 sm:px-8 py-4 overflow-auto h-auto w-full">
                 <!-- table name stocks status -->
 
                 <div class="flex justify-between">
@@ -329,7 +329,7 @@
 
                 <!-- table start -->
 
-                <div class="px-5 inline-block min-w-0 shadow-lg rounded-lg overflow-hidden">
+                <div class="inline-block min-w-0 shadow-lg rounded-lg overflow-hidden">
                     <table class="min-w-0 leading-normal">
                         <!-- table head -->
 
@@ -353,6 +353,10 @@
                                 </th>
                                 <th
                                     class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                    Number Of Stock
+                                </th>
+                                <th
+                                    class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
                                     sell
                                 </th>
                             </tr>
@@ -361,223 +365,63 @@
                         <!-- table body -->
 
                         <tbody>
+                            <% user.stock.forEach( (stock) => {      %>
                             <tr class="bg-white">
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap">
-                                        Gdax
+                                <td class="px-3 py-3 border-b border-gray-200 text-sm ">
+                                    <p class="text-gray-900 whitespace-no-wrap ">
+                                        <%= stock.companySymbol      %>
                                     </p>
                                 </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap">
-                                        $11111
+                                <td class="px-3 py-3 border-b border-gray-200 text-sm ">
+                                    <p class="text-gray-900 whitespace-no-wrap ">
+                                        <%      currentPrice = 500   %>
+                                        $<%=    currentPrice         %>
                                     </p>
                                 </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
+                                <td class="px-3 py-3 border-b border-gray-200 text-sm ">
                                     <p class="block px-4 flex">
-                                        <span>0.2334</span>
-                                        <svg class="w-6 h-4 text-tempc-400" fill="none" stroke-linecap="round"
-                                            stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
-                                            stroke="currentColor">
-                                            <path d="M8 7l4-4m0 0l4 4m-4-4v18"></path>
-                                        </svg>
+                                        <% let price = stock.stockPrice - currentPrice      %>
+                                        <% if(price < 0) {                                  %>   
+                                        <%      color="red"                                 %>
+                                                <span>$<%= price.toPrecision(4) %><span class="text-red-600 text-lg">&#8595;</span></span>
+                                        <% } else {                                         %>
+                                        <%      color="green"                               %>
+                                                <span>$<%= price.toPrecision(4) %><span class="text-green-600 text-lg">&#8593;</span></span>
+                                        <% }                                                %>
                                     </p>
                                 </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-tempc-400 whitespace-no-wrap">
-                                        +639
+                                <td class="px-3 py-3 border-b border-gray-200 text-<%= color%>-600 text-sm ">
+                                    <p class="text-tempc-400 whitespace-no-wrap ">
+                                        <% if(stock.stockPrice > currentPrice) {            %>
+                                        <%     loss = stock.stockPrice - currentPrice       %>
+                                        <%     status = (loss/stock.stockPrice) * 100       %>
+                                        <% } else if(stock.stockPrice < currentPrice) {     %>
+                                        <%     gain = currentPrice - stock.stockPrice       %>
+                                        <%     status = (gain/stock.stockPrice) * 100       %>
+                                        <% }                                                %>
+                                        <span><%= status.toPrecision(4) %>%</span>
+                                        
+                                    </p>
+                                </td>
+                                <td class="px-3 py-3 border-b border-gray-200 text-sm ">
+                                    <p class="text-gray-900 whitespace-no-wrap ">
+                                        <%= stock.noOfStock %>
                                     </p>
                                 </td>
                                 <td class="px-3 py-3 border-b border-gray-200 text-sm text-tempc-400">
-                                    <svg class="w-6 h-6" fill="none" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-                                        <path
-                                            d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
-                                        </path>
-                                    </svg>
+                                    <form action="/transaction/sell/<%= stock._id%>" method="POST" id="sell-stock">
+                                        <button type="submit">
+                                            <svg class="w-6 h-6" fill="none" stroke-linecap="round" stroke-linejoin="round"
+                                                stroke-width="2" viewBox="0 0 24 24" stroke="green">
+                                                <path
+                                                    d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
+                                                </path>
+                                            </svg>
+                                        </button>
+                                    </form>
                                 </td>
                             </tr>
-                            <tr class="bg-gray-100">
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap">
-                                        Gdax1
-                                    </p>
-                                </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap">
-                                        $11112
-                                    </p>
-                                </td>
-
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="block px-4 flex">
-                                        <span>0.2334</span>
-                                        <svg class="w-6 h-4 text-tempc-200" fill="none" stroke-linecap="round"
-                                            stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
-                                            stroke="currentColor">
-                                            <path d="M16 17l-4 4m0 0l-4-4m4 4V3"></path>
-                                        </svg>
-                                    </p>
-                                </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-tempc-200 whitespace-no-wrap">
-                                        -639
-                                    </p>
-                                </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm text-tempc-400">
-                                    <svg class="w-6 h-6" fill="none" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-                                        <path
-                                            d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
-                                        </path>
-                                    </svg>
-                                </td>
-                            </tr>
-                            <tr class="bg-white">
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap">
-                                        Gdax
-                                    </p>
-                                </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap">
-                                        $11111
-                                    </p>
-                                </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="block px-4 flex">
-                                        <span>0.2334</span>
-                                        <svg class="w-6 h-4 text-tempc-400" fill="none" stroke-linecap="round"
-                                            stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
-                                            stroke="currentColor">
-                                            <path d="M8 7l4-4m0 0l4 4m-4-4v18"></path>
-                                        </svg>
-                                    </p>
-                                </td>
-
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-tempc-400 whitespace-no-wrap">
-                                        +639
-                                    </p>
-                                </td>
-
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm text-tempc-400">
-                                    <svg class="w-6 h-6" fill="none" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-                                        <path
-                                            d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
-                                        </path>
-                                    </svg>
-                                </td>
-                            </tr>
-                            <tr class="bg-gray-100">
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap">
-                                        Gdax
-                                    </p>
-                                </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap">
-                                        $11111
-                                    </p>
-                                </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="block px-4 flex">
-                                        <span>0.2334</span>
-                                        <svg class="w-6 h-4 text-tempc-200" fill="none" stroke-linecap="round"
-                                            stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
-                                            stroke="currentColor">
-                                            <path d="M16 17l-4 4m0 0l-4-4m4 4V3"></path>
-                                        </svg>
-                                    </p>
-                                </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-tempc-200 whitespace-no-wrap">
-                                        -119
-                                    </p>
-                                </td>
-
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm text-tempc-400">
-                                    <svg class="w-6 h-6" fill="none" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-                                        <path
-                                            d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
-                                        </path>
-                                    </svg>
-                                </td>
-                            </tr>
-                            <tr class="bg-white">
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap">
-                                        Gdax
-                                    </p>
-                                </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap">
-                                        $11111
-                                    </p>
-                                </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="block px-4 flex">
-                                        <span>0.2334</span>
-                                        <svg class="w-6 h-4 text-tempc-400" fill="none" stroke-linecap="round"
-                                            stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
-                                            stroke="currentColor">
-                                            <path d="M8 7l4-4m0 0l4 4m-4-4v18"></path>
-                                        </svg>
-                                    </p>
-                                </td>
-
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-tempc-400 whitespace-no-wrap">
-                                        +639
-                                    </p>
-                                </td>
-
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm text-tempc-400">
-                                    <svg class="w-6 h-6" fill="none" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-                                        <path
-                                            d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
-                                        </path>
-                                    </svg>
-                                </td>
-                            </tr>
-                            <tr class="bg-gray-100">
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap">
-                                        Gdax
-                                    </p>
-                                </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap">
-                                        $11111
-                                    </p>
-                                </td>
-
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="block px-4 flex">
-                                        <span>0.2334</span>
-                                        <svg class="w-6 h-4 text-tempc-200" fill="none" stroke-linecap="round"
-                                            stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
-                                            stroke="currentColor">
-                                            <path d="M16 17l-4 4m0 0l-4-4m4 4V3"></path>
-                                        </svg>
-                                    </p>
-                                </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                                    <p class="text-tempc-200 whitespace-no-wrap">
-                                        -339
-                                    </p>
-                                </td>
-                                <td class="px-3 py-3 border-b border-gray-200 text-sm text-tempc-400 pr-4">
-                                    <svg class="w-6 h-6" fill="none" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-                                        <path
-                                            d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
-                                        </path>
-                                    </svg>
-                                </td>
-                            </tr>
+                            <% }) %>
                         </tbody>
                     </table>
                 </div>
