--- a/views/transaction/history.ejs
+++ b/views/transaction/history.ejs
@@ -12,7 +12,7 @@
               <thead>
                 <tr class="text-center">
                   <th>Date</th>
-                  <th>Opration</th>
+                  <th>Operation</th>
                   <th>Amount</th>
                   <th>Details</th>
                 </tr>
@@ -24,7 +24,7 @@
                       <p><%= stock.createdAt %></p>
                     </td>
                     <td>
-                      <p><%= stock.opration %></p>
+                      <p><%= stock.operation %></p>
                     </td>
                     <td>
                       <p><%= stock.amount %></p>
