--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,1 +1,97 @@
-<h1>Edit Profile</h1>
+<!-- <div class="m-auto">
+
+    <h3 class="m-auto">Edit Profile</h3>
+    <div class="row m-auto">
+        <form action="/edit/<%=_id%>" method="POST" class="col s12">
+            <input type="hidden" name="_method" value="PUT">
+            <h4>
+                USER-FIRSTNAME
+                <input type="text" name="firstName" value="<%=firstName%>" />
+            </h4>
+            <div class="row">
+                <div class="input-field">
+                    <input type="text" id="lastName" name="lastName" value="<%=lastName%>">
+                    <label for="lastName">lastName</label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field">
+                    <input type="email" id="email" name="email" value="<%=email%>">
+                    <label for="email">Email</label>
+                </div>
+            </div>
+            <div class="row">
+                <input type="submit" value="Save" class="btn">
+                <a href="/portfolio" class="btn orange">Cancel</a>
+            </div>
+        </form>
+    </div>
+</div> -->
+<main class="md:col-span-4 md:ml-56 lg:ml-64 md:pr-14 w-full">
+    <div class="container px-5 py-10 mx-auto md:px-auto ">
+        <!-- header -->
+
+        <header class="my-4 absolute-center">
+            <span class="text-gray-700 text-3xl font-semibold leading-none tracking-wider">Edit Profile</span
+      >
+    </header>
+
+    <hr class="line my-4" />
+
+   <!--form  -->
+
+
+        <form action="/edit/<%=_id%>" method="POST" class="w-full max-w-sm md:pl-48 m-auto">
+            <input type="hidden" name="_method" value="PUT">
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/3">
+                    <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4 mr-4" for="inline-full-name">
+          First Name :
+        </label>
+                </div>
+                <div class="md:w-2/3">
+                    <input type="text" name="firstName" value="<%=firstName%>" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" />
+                    <!-- <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" id="inline-full-name" type="text" value="Jane Doe"> -->
+                </div>
+            </div>
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/3">
+                    <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4 mr-4" for="inline-full-name">
+          Last Name :
+        </label>
+                </div>
+                <div class="md:w-2/3">
+                    <input type="text" id="lastName" name="lastName" value="<%=lastName%>" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500">
+                    <!-- <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" id="inline-full-name" type="text" value="Jane Doe"> -->
+                </div>
+            </div>
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/3">
+                    <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4 mr-4" for="inline-full-name">
+          Email_____ <span class="mr-10">:</span>
+            </label>
+    </div>
+    <div class="md:w-2/3">
+        <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" type="email" id="email" name="email" value="<%=email%>">
+        <!-- <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" id="inline-full-name" type="text" value="Jane Doe"> -->
+    </div>
+    </div>
+
+
+    <div class="md:flex md:items-center">
+        <div class="md:w-1/2">
+            <input type="submit" value="Save" class="btn mb-4 shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded">
+            <!-- <button class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                    Save
+                  </button> -->
+        </div>
+        <div class="md:w-1/2">
+            <button class="mb-4 shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+          <a href="/portfolio">Cancel</a>
+        </button>
+        </div>
+    </div>
+    </form>
+    </div>
+</main>
